ci: update changelog process

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -7,20 +7,21 @@ options:
   commits:
     # filters:
     #   Type:
-    #     - sparkles
-    #     - bug
-    #     - zap
-    #     - recycle
+    #     - feat
+    #     - fix
+    #     - perf
+    #     - refactor
   commit_groups:
     # title_maps:
-    #   sparkles: Features
-    #   bug: Bug Fixes
-    #   zap: Performance Improvements
-    #   recycle: Code Refactoring
+    #   feat: Features
+    #   fix: Bug Fixes
+    #   perf: Performance Improvements
+    #   refactor: Code Refactoring
   header:
-    pattern: "^:(\\w*)\\:\\s(.*)$"
+    pattern: "^(\\w*)(?:\\(([\\w\\$\\.\\-\\*\\s]*)\\))?\\:\\s(.*)$"
     pattern_maps:
       - Type
+      - Scope
       - Subject
   notes:
     keywords:
