ci(release): use a better methods to do release since tags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,21 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - name: Get changed files
+      - name: Get changed files since the last tags
         id: changed-files
-        uses: jitterbit/get-changed-files@v1
+        uses: jsmith/changes-since-last-tag@v0.3.3
+        with: 
+          glob: |
+            mkdocs.yml
+            docs/**
+            overrides/**
+            find_unused_media.py
+            .github/workflows/create_index.yml
       - name: create zip of changed files
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           mkdir -p changed_files
-          for file in ${{ steps.changed-files.outputs.all }}; do
+          for file in ${{ steps.changed-files.outputs.files }}; do
             mkdir -p changed_files/$(dirname $file)
             cp $file changed_files/$file
           done
