ci(release): add file to follow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,14 @@ jobs:
           node-version: '12.x'
       - name: Get changed files since the last tags
         id: changed-files
-        uses: jsmith/changes-since-last-tag@v0.3.3
+        uses: jsmith/changes-since-last-tag@main
+        with: 
+          glob: |
+            mkdocs.yml
+            docs/**
+            overrides/**
+            find_unused_media.py
+            .github/workflows/create_index.yml
       - name: create zip of changed files
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
