fix: add find unused media

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
             docs/**
             overrides/**
             .github/workflows/create_index.yml
+            find_unused_media.py
       - name: create zip of changed files
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
