--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,11 +36,13 @@ jobs:
         run: |
           mkdir -p changed_files
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file added to zip"
             mkdir -p changed_files/$(dirname $file)
             cp $file changed_files/$file
           done
           cd changed_files
           zip -r changed_files.zip .
+          mv changed_files.zip ../
       - name: create changelog
         run: |
           npx rexreplace "^.*?#+\s\[.*?\n.*?(?=\s*#+\s\[)" "_" -s -M -G -m -o "CHANGELOG.md" > body_changelog.md
