--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
           cd ..
       - name: Create zip of all files 
         run : |
-          zip -r release.zip docs/ overrides/ .github/workflows/create_index.yml find_unused_media.py auto_update.yml
+          zip -r release.zip docs/ overrides/ .github/workflows/create_index.yml .github/workflows/auto_update.yml find_unused_media.py
       - name: create changelog
         run: |
           npx rexreplace "^.*?#+\s\[.*?\n.*?(?=\s*#+\s\[)" "_" -s -M -G -m -o "CHANGELOG.md" > body_changelog.md
