ci: add mermaid configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,7 +88,10 @@ plugins:
       enable_creation_date: true
   - ezlinks:
         wikilinks: true
-  - mermaid2
+  - mermaid2:
+      arguments:
+        theme: |
+          ^(JSON.parse(__md_get("__palette").index == 1)) ? 'dark' : 'light'
   - awesome-pages
   - embed_file:
       callouts: true
