better gestion of env docs

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -6,6 +6,19 @@ group:
     - find_unused_media.py
     - .github/workflows/create_index.yml
     - .github/workflows/auto_update.yml
+    - source: .github/workflows/reload_clean.yml
+      dest: .github/workflows/reload_clean.yml
+      repos: |
+        ObsidianPublisher/publisher-template-gh-pages
+        ObsidianPublisher/publisher-template-netlify
+    - source: .github/.env_netlify
+      dest: .github/.env
+      repos: |
+        ObsidianPublisher/publisher-template-netlify
+    - source: .github/.env_gh-pages
+      dest: .github/.env
+      repos: |
+        ObsidianPublisher/publisher-template-gh-pages
     repos: |
       ObsidianPublisher/publisher-template-gh-pages
       ObsidianPublisher/publisher-template-netlify
