--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ jobs:
             .github/workflows/create_index.yml
             find_unused_media.py
             .github/workflows/auto_update.yml
+            .github/workflows/reload_clean.yml
+            .github/.env_netlify
+            .github/.env_gh-pages
       - name: create zip of changed files
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
@@ -47,7 +50,7 @@ jobs:
           cd ..
       - name: Create zip of all files 
         run : |
-          zip -r release.zip docs/ overrides/ .github/workflows/create_index.yml .github/workflows/auto_update.yml find_unused_media.py
+          zip -r release.zip docs/ overrides/ .github/workflows/create_index.yml .github/workflows/auto_update.yml find_unused_media.py .github/workflows/reload_clean.yml
       - name: create changelog
         run: |
           npx rexreplace "^.*?#+\s\[.*?\n.*?(?=\s*#+\s\[)" "_" -s -M -G -m -o "CHANGELOG.md" > body_changelog.md
