--- a/.gitignore
+++ b/.gitignore
@@ -102,13 +102,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+.venv*
 
 # Spyder project settings
 .spyderproject
