--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           GH_PAT: ${{ secrets.GH_PAT }}
           SKIP_PR: true
-          COMMIT_PREFIX: "[SYNC]"
           ORIGINAL_MESSAGE: true
+          COMMIT_AS_PR_TITLE: true
+
 
