feat: use a version file to know when to update the template

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,7 @@ jobs:
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
           files: |
+            version.txt
             README.md
             CHANGELOG.md
             LICENSE
