--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Create zip of all files 
         run : |
           zip -r release.zip docs/ overrides/ find_unused_media.py 
+          mv version.txt update.txt
       - name: create changelog
         run: |
           npx rexreplace "^.*?#+\s\[.*?\n.*?(?=\s*#+\s\[)" "_" -s -M -G -m -o "CHANGELOG.md" > body_changelog.md
@@ -88,7 +89,7 @@ jobs:
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
           files: |
-            version.txt
+            update.txt
             README.md
             CHANGELOG.md
             LICENSE
