--- a/.github/ISSUE_TEMPLATE/Feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature_request.yml
@@ -18,7 +18,7 @@ body:
           required: true
         - label: "I checked the issue to prevent duplicate"
           required: true
-        - label: "My issue doesn't concern the **Obsidian Plugin**. Issue regarding the plugin must be [here](https://github.com/ObsidianPublisher/obsidian-github-publisher/issues)
+        - label: "My issue doesn't concern the **Obsidian Plugin**. Issue regarding the plugin must be [here](https://github.com/ObsidianPublisher/obsidian-github-publisher/issues)"
           required: true
   - type: textarea
     id: describe-request
