--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -23,7 +23,7 @@ body:
           required: true
         - label: "My issue is not relative to the [actions/github Workflow](https://github.com/ObsidianPublisher/actions). If it's the case, you must open an issue [here](https://github.com/ObsidianPublisher/actions/issues)."
           required: true
-        - label: "My issue is not relative to the **Obsidian Plugin**. If it's the case, you must open an issue [here](https://github.com/ObsidianPublisher/obsidian-github-publisher/issues).
+        - label: "My issue is not relative to the **Obsidian Plugin**. If it's the case, you must open an issue [here](https://github.com/ObsidianPublisher/obsidian-github-publisher/issues)."
           required: true
   - type: textarea
     id: error
